--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Selly"
         tools:targetApi="31">
         <activity
-            android:name=".ui.screens.Profile"
+            android:name="com.example.ismailozkan.selly.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Selly">
